# instantview

./: README.md  pylama.ini  pyproject.toml
.github/workflows/: python-ci.yml
instantview/: __init__.py  __main__.py  hooks.py  web.py
instantview/gusmobile/: __init__.py  client.py
